--- a/QuitSmoking.GraphQLClient.Hoangnv/CreatePlanHoangnv/Index.razor
+++ b/QuitSmoking.GraphQLClient.Hoangnv/CreatePlanHoangnv/Index.razor
@@ -46,6 +46,7 @@
                     <div class="btn-group" role="group">
                         <a href="/CreatePlanHoangnv/delete/@plan.CreatePlanQuitSmokingHoangNvid" class="btn btn-sm btn-primary">Delete</a>
                         <a href="/CreatePlanHoangnv/update/@plan.CreatePlanQuitSmokingHoangNvid" class="btn btn-sm btn-warning">Edit</a>
+                        <a href="/PlanQuitHoangnv/Index/@plan.CreatePlanQuitSmokingHoangNvid" class="btn btn-sm btn-success">Details</a>
                     </div>
                 </td>
             </tr>
