--- a/QuitSmoking.GraphQLClient.Hoangnv/Layout/NavMenu.razor
+++ b/QuitSmoking.GraphQLClient.Hoangnv/Layout/NavMenu.razor
@@ -24,6 +24,16 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CreatePlanHoangnv/Index">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Create plan
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/QuitMethodHoangnv">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Quit method
+            </NavLink>
+        </div>
     </nav>
 </div>
 
