--- a/QuitSmoking.GraphQLClient.Hoangnv/PlanQuitHoangnv/Update.razor
+++ b/QuitSmoking.GraphQLClient.Hoangnv/PlanQuitHoangnv/Update.razor
@@ -20,14 +20,14 @@ else
     <EditForm Model="planQuitMethod" OnValidSubmit="HandleValidSubmit">
         <DataAnnotationsValidator />
         <ValidationSummary />
-        <div class="mb-3">
+        @* <div class="mb-3">
             <InputNumber type="hidden" class="form-control" @bind-Value="planQuitMethod.CreatePlanQuitSmokingHoangNvid" />
-        </div>
-        <div class="mb-3">
+        </div> *@
+        @* <div class="mb-3">
             <label class="form-label">Phương pháp ID</label>
             <InputNumber class="form-control" @bind-Value="planQuitMethod.QuitMethodHoangNvid" />
             <ValidationMessage For="() => planQuitMethod.QuitMethodHoangNvid" />
-        </div>
+        </div> *@
         <div class="mb-3">
             <label class="form-label">Ngày bắt đầu</label>
             <InputDate class="form-control" @bind-Value="planQuitMethod.StartDate" />
